--- a/guide_herbs_eng.htm
+++ b/guide_herbs_eng.htm
@@ -1,84 +1,76 @@
 <html>
-<META http-equiv=Content-Type content="text/html; charset=windows-1252"><LINK 
-href="style.css" type=text/css rel=stylesheet>
+<META http-equiv=Content-Type content="text/html; charset=windows-1252">
+<LINK href="style.css" type=text/css rel=stylesheet>
 <script>
-var DATA = new Array();
+	var DATA = new Array();
 </script>
 <script src="hamster_eng.js"></script>
 <script src="guide_herbs_eng.js"></script>
 
 <center>
-<img class=guideheadline src="img/t_herbs_eng.jpg" />
-<table cellpadding=2 cellspacing=2 border=0 width=650>
+	<img class=guideheadline src="img/t_herbs_eng.jpg" />
+	<table cellpadding=2 cellspacing=2 border=0 width=650>
 
 
-<script>
-	OUT('<TABLE cellSpacing=0 cellPadding=0 align=center border=0 class="problem_index">');
-	OUT('<tr><td><ul>');
-	var zaehler = 1;
+		<script>
+			OUT('<TABLE cellSpacing=0 cellPadding=0 align=center border=0 class="problem_index">');
+			OUT('<tr><td><ul>');
+			var zaehler = 1;
 
-	for (i=0; i < DATA.length; ++i)
-	{
-		var it = DATA[i];
+			for (i = 0; i < DATA.length; ++i) {
+				var it = DATA[i];
 
-		if (it.section)
-		{
-			OUT('<li><a href="#section_' + zaehler + '">' + it.section + '</a></li>');
-			++zaehler;
-		}
-	}
-	OUT('</ul></td></tr>');
-	OUT('</TABLE>');
-
-	OUT('<table cellpadding=2 cellspacing=2 border=0 width=650>');
-	zaehler = 1;
-	for (i=0; i < DATA.length; ++i)
-	{
-		var it = DATA[i];
-
-		class_modifier = "";
-		goto_modifier = "";
-		if (PARAM["id"] && (it.id == PARAM["id"]))
-		{
-			class_modifier = '_mark';
-			goto_modifier = '<a name=goto id=goto></a>';
-		}
-
-		if (it.section)
-		{
-			OUT('<tr><td colspan=4 class=section align=center id="section_' + zaehler + '" >' + it.section + '</td></tr>');
-			++zaehler;
-			OUT('<tr><th>&nbsp;</th><th class=itemtabth>Herb</th><th class=itemtabth>Effect</th><th class=itemtabth>Value</th></tr>');
-
-		}
-		else if (it.subtype=='comment')
-		{
-			OUT('<tr><td colspan=4 class=itemcomment valign=top>' + goto_modifier + it.text + '</td></tr>');
-		}
-		else
-		{
-			class_modifier = "";
-			goto_modifier = "";
-			if (PARAM["id"] && it.id && (it.id == PARAM["id"]))
-			{
-				class_modifier = '_mark';
-				goto_modifier = '<a name=goto id=goto></a>';
+				if (it.section) {
+					OUT('<li><a href="#section_' + zaehler + '">' + it.section + '</a></li>');
+					++zaehler;
+				}
 			}
-			OUT('<tr>');
-			OUT('<td class=itempic rowspan=2 width=100 height=100>' + goto_modifier + '<img src="' + it.pic + '" border=0></td>');
-			OUT('<td class=itemcell' + class_modifier + ' valign=top height=10><b>' + it.name + '</b></td>');
-			OUT('<td class=itemcell' + class_modifier + ' valign=top>' + it.effect + '&nbsp;</td>');
-			OUT('<td class=itemcell' + class_modifier + ' valign=top align=center>' + it.value + '&nbsp;</td>');
-			OUT('</tr><tr>');
-			OUT('<td class=itemcell' + class_modifier + ' colspan=3 valign=top height=60>' + it.text + '</td>');
-			OUT('<tr></tr>');
-		}
-	}
+			OUT('</ul></td></tr>');
+			OUT('</TABLE>');
 
-</script>
+			OUT('<table cellpadding=2 cellspacing=2 border=0 width=650>');
+			zaehler = 1;
+			for (i = 0; i < DATA.length; ++i) {
+				var it = DATA[i];
 
-</table>
-<p class=smallnote></p>
+				class_modifier = "";
+				goto_modifier = "";
+				if (PARAM["id"] && (it.id == PARAM["id"])) {
+					class_modifier = '_mark';
+					goto_modifier = '<a name=goto id=goto></a>';
+				}
+
+				if (it.section) {
+					OUT('<tr><td colspan=4 class=section align=center id="section_' + zaehler + '" >' + it.section + '</td></tr>');
+					++zaehler;
+					OUT('<tr><th>&nbsp;</th><th class=itemtabth>Herb</th><th class=itemtabth>Effect</th><th class=itemtabth>Value</th></tr>');
+
+				}
+				else if (it.subtype == 'comment') {
+					OUT('<tr><td colspan=4 class=itemcomment valign=top>' + goto_modifier + it.text + '</td></tr>');
+				}
+				else {
+					class_modifier = "";
+					goto_modifier = "";
+					if (PARAM["id"] && it.id && (it.id == PARAM["id"])) {
+						class_modifier = '_mark';
+						goto_modifier = '<a name=goto id=goto></a>';
+					}
+					OUT('<tr>');
+					OUT('<td class=itempic rowspan=2 width=100 height=100>' + goto_modifier + '<img src="' + it.pic + '" border=0></td>');
+					OUT('<td class=itemcell' + class_modifier + ' valign=top height=10><b>' + it.name + '</b></td>');
+					OUT('<td class=itemcell' + class_modifier + ' valign=top>' + it.effect + '&nbsp;</td>');
+					OUT('<td class=itemcell' + class_modifier + ' valign=top align=center>' + it.value + '&nbsp;</td>');
+					OUT('</tr><tr>');
+					OUT('<td class=itemcell' + class_modifier + ' colspan=3 valign=top height=60>' + it.text + '</td>');
+					OUT('<tr></tr>');
+				}
+			}
+
+		</script>
+
+	</table>
+	<p class=smallnote></p>
 
 </center>
 
